@@ -479,7 +479,7 @@ pass in quick on $lanif proto udp from any port = 546 to ff02::1:2 port = 547
 EOD;
 		/* allow access to DHCP server on optional interfaces */
 		foreach ($optcfg as $on => $oc) {
-			$ipfrules .= "# allow link-local traffic on {$on}";
+			$ipfrules .= "# allow link-local traffic on {$on}\n";
 			$ipfrules .= "pass in quick on {$oc['if']} from fe80::/10 to fe80::/10\n";
 			$ipfrules .= "pass out quick on {$oc['if']} from fe80::/10 to fe80::/10\n";
 			if ((isset($config['dhcpd'][$on]['enable']) && !$oc['bridge']) ||
